--- a/HTML Modelo/sneat-1.0.0/assets/css/demo.css
+++ b/HTML Modelo/sneat-1.0.0/assets/css/demo.css
@@ -16,7 +16,8 @@
 .app-brand-text.demo {
   font-size: 1.75rem;
   letter-spacing: -0.5px;
-  text-transform: lowercase;
+  /*text-transform: lowercase;*/
+  text-transform: none;
 }
 
 /* ! For .layout-navbar-fixed added fix padding top tpo .layout-page */
