agente,importar y productos listo

--- a/HTML Modelo/sneat-1.0.0/assets/css/demo.css
+++ b/HTML Modelo/sneat-1.0.0/assets/css/demo.css
@@ -127,8 +127,8 @@
 /********************************************************************/
 /*calendario*/
 .panel{
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
+  margin-left: 0.6rem;
+  margin-right: 0.6rem;
   margin-top: 0.7rem;
   margin-bottom: 0.9rem;
 }
@@ -155,7 +155,7 @@
 }
 
 /* Color de fondo del cuadrado según el tipo de evento */
-.filter-btn[data-type="meeting"]::before {
+.filter-btn[data-type="ropa"]::before {
   background-color: #d2eea3; /* Color de Reunión */
 }
 
@@ -174,7 +174,7 @@
 }
 
 /* Color de fondo del cuadrado según el tipo de evento */
-.filter-btn[data-type="workshop"]::before {
+.filter-btn[data-type="tecnologia"]::before {
   background-color: #c6aff9; /* Color de Reunión */
 }
 
@@ -193,7 +193,7 @@
 }
 
 /* Color de fondo del cuadrado según el tipo de evento */
-.filter-btn[data-type="conference"]::before {
+.filter-btn[data-type="deporte"]::before {
   background-color: #f2d288; /* Color de Reunión */
 }
 
@@ -235,30 +235,8 @@ display:flex;*/
   
 }
 
-
-<<<<<<< HEAD
-=======
-.fc-left{
-  order: 1; /*lleva las botones a la izquierda*/
+.fc-event{
+  margin-bottom: 0.2rem !important;
 }
-.fc-center {
-  order: 2; /* Mantener el título en el centro */
-  text-align: right; /* Asegurar el centrado */
-  flex-grow: 3; /* Hace que el centro se expanda para forzar el centrado */
-}
- /* Estilizar el texto "+ more" ----*/
-.fc-more {
-  font-size: 12px; /* Tamaño pequeño ----*/
-  color: #4c75c2; /* Color gris ----*/
-  /*position: absolute;
-  bottom: 2px;
-  right: 5px;*/
-}
-/* Ajustes visuales generales -------*/
-.panel-body {
-  padding: 20px;
-}
-
->>>>>>> 78d03cc26d3cdb68c79c52d23d9e4d4099849726
 
 
