--- a/HTML Modelo/sneat-1.0.0/assets/css/demo.css
+++ b/HTML Modelo/sneat-1.0.0/assets/css/demo.css
@@ -125,6 +125,17 @@
 
 }
 
+.desing-title-page{
+  font-family: 'Poppins', sans-serif; 
+  color: #7367F0; 
+  font-weight: bold; 
+  padding-top: 1rem; 
+  padding-bottom: 1rem; 
+  margin-bottom: 1rem; 
+  text-align: center; 
+  font-size: 40px;
+}
+
 /********************************************************************/
 /*calendario*/
 .panel{
@@ -241,3 +252,42 @@ display:flex;*/
 }
 
 
+/*--------------------------------------*/
+.fa{
+  display:inline-block;
+  font:normal normal normal 14px/1 FontAwesome;
+  font-size:inherit;
+  text-rendering:auto;
+  -webkit-font-smoothing:antialiased;
+  -moz-osx-font-smoothing:grayscale
+}
+.fa-lg{font-size:1.33333333em;
+  line-height:.75em;vertical-align:-15%}
+.fa-2x{font-size:2em}
+.fa-3x{font-size:3em}
+.fa-4x{font-size:4em}
+.fa-5x{font-size:5em}
+.fa-fw{width:1.28571429em;text-align:center}
+.fa-ul{padding-left:0;margin-left:2.14285714em;list-style-type:none}
+.fa-ul>li{position:relative}
+.fa-search:before{content:"\f002"}
+.fa-envelope-o:before{content:"\f003"}
+.fa-heart:before{content:"\f004"}
+.fa-star:before{content:"\f005"}
+.fa-star-o:before{content:"\f006"}
+.fa-user:before{content:"\f007"}
+
+.fa-film:before{content:"\f008"}
+.fa-th-large:before{content:"\f009"}
+.fa-th:before{content:"\f00a"}
+.fa-th-list:before{content:"\f00b"}
+.fa-check:before{content:"\f00c"}
+.fa-remove:before,.fa-close:before,.fa-times:before{content:"\f00d"}
+.fa-search-plus:before{content:"\f00e"}
+.fa-search-minus:before{content:"\f010"}
+.fa-power-off:before{content:"\f011"}
+.fa-signal:before{content:"\f012"}
+.fa-gear:before,.fa-cog:before{content:"\f013"}
+.fa-trash-o:before{content:"\f014"}
+.fa-home:before{content:"\f015"}
+.fa-file-o:before{content:"\f016"}
