--- a/GRUPO2-GTICS/src/main/resources/templates/index.html
+++ b/GRUPO2-GTICS/src/main/resources/templates/index.html
@@ -24,6 +24,7 @@
 <a th:href="@{/coordinador}" class="button">Coordinador Zonal</a>
 <a th:href="@{/agente}" class="button">Agente</a>
 <a th:href="@{/usuario}" class="button">Usuario final</a>
+<a th:href="@{/sistema}" class="button">LogIn</a>
 <a th:href="@{'/hola/gaaa'}" class="button">HOLA</a>
 
 
